# outin-kanat

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  raportti.txt  retro.md
.github/workflows/: main.yml
src/: app.py  config.py  db_helper.py  schema.sql  util.py
src/entities/: todo.py
src/htmlcov/: index.html
src/repositories/: reference_repositories.py
src/static/: main.css
src/story_tests/: add_reference.robot  add_reference_with_doi.robot  copy_references.robot  deleting.robot  editing.robot  index.robot  resource.robot
src/templates/: add_reference.html  add_reference_with_doi.html  create_bibtex.html  index.html  lomake.html  remove_reference.html  update_reference.html  update_tags.html
src/tests/: test_app.py
templates/: lomake.html
