[project]
name = "outin-kanat"
version = "0.1.0"
description = ""
authors = [
    {name = "Laura",email = "immonen.laura.maria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "robotframework (>=7.3.2,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.3,<5.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.poetry]
package-mode = false
